--- a/klug-dactyl.html
+++ b/klug-dactyl.html
@@ -26,12 +26,12 @@
 <body>
 <div class="reveal">
 <div class="slides">
-<section id="sec-title-slide"><h1 class="title">Rochester KLUG Keyboard Meetup</h1><h2 class="author">Tim Anderson</h2><p class="date">Created: 2019-07-11 Thu 14:55</p>
+<section id="sec-title-slide"><h1 class="title">Rochester KLUG Keyboard Meetup</h1><h2 class="author">Tim Anderson</h2><p class="date">Created: 2019-07-11 Thu 15:06</p>
 </section>
 
 <section>
-<section id="slide-orgd3369e2">
-<h2 id="orgd3369e2">Tim Anderson</h2>
+<section id="slide-orgafaa520">
+<h2 id="orgafaa520">Tim Anderson</h2>
 <p>
 Who am I?
 </p>
@@ -57,8 +57,8 @@ Twitter, so don't bother looking for me there.
 </section>
 </section>
 <section>
-<section id="slide-orga1a3d75">
-<h2 id="orga1a3d75">So, what is this Dactyl Keyboard thing?</h2>
+<section id="slide-orge9d5e96">
+<h2 id="orge9d5e96">So, what is this Dactyl Keyboard thing?</h2>
 <ul>
 <li>And why should I care?</li>
 
@@ -71,8 +71,8 @@ Twitter, so don't bother looking for me there.
 </section>
 </section>
 <section>
-<section id="slide-org9649d13">
-<h2 id="org9649d13">Parameterized, Split-Hand, Concave, Columnar, Ergonomic Keyboard</h2>
+<section id="slide-org04f53e7">
+<h2 id="org04f53e7">Parameterized, Split-Hand, Concave, Columnar, Ergonomic Keyboard</h2>
 <ul>
 <li>Written in Clojure</li>
 
@@ -94,8 +94,8 @@ first I'll talk a little bit about the project.
 </section>
 </section>
 <section>
-<section id="slide-orgb62d79d">
-<h2 id="orgb62d79d">History &amp; Background</h2>
+<section id="slide-orga89435b">
+<h2 id="orga89435b">History &amp; Background</h2>
 <p>
 <iframe width="440" height="335" src="https://www.youtube.com/embed/uk3A41U0iO4" frameborder="0" allowfullscreen></iframe>
 </p>
@@ -134,8 +134,8 @@ interpret Clojure and convert it into the language that OpenSCAD understands.
 </section>
 </section>
 <section>
-<section id="slide-orgda7003d">
-<h2 id="orgda7003d">Where is the Project Now?</h2>
+<section id="slide-org10291c2">
+<h2 id="org10291c2">Where is the Project Now?</h2>
 <ul>
 <li>Last commit was in 2017</li>
 <li>Left in unfinished state &amp; appears to be abandoned</li>
@@ -172,8 +172,8 @@ most challenging DIY keyboard projects you could take on.
 </section>
 </section>
 <section>
-<section id="slide-org990e28d">
-<h2 id="org990e28d">Why Tho?</h2>
+<section id="slide-orgda6970f">
+<h2 id="orgda6970f">Why Tho?</h2>
 <ul>
 <li class="fragment fade-in">In short, because I can.</li>
 
@@ -201,8 +201,8 @@ build my own badass keyboard, so I did.
 </section>
 </section>
 <section>
-<section id="slide-org9503c7e">
-<h2 id="org9503c7e">So, let's look at a regular keyboard</h2>
+<section id="slide-org5f4bd9a">
+<h2 id="org5f4bd9a">So, let's look at a regular keyboard</h2>
 
 <div class="figure">
 <p><object type="image/svg+xml" data="img/KB_United_States.svg" class="org-svg">
@@ -239,8 +239,8 @@ ergo keyboard design could help me to do that.
 </section>
 </section>
 <section>
-<section id="slide-org5209fe3">
-<h2 id="org5209fe3">Good Habits Vs. Bad</h2>
+<section id="slide-orgbc3fb84">
+<h2 id="orgbc3fb84">Good Habits Vs. Bad</h2>
 
 <div class="figure">
 <p><img src="img/keyboard_rsi_prevent.jpg" alt="keyboard_rsi_prevent.jpg" />
@@ -260,8 +260,8 @@ Most of these are other open source keyboards that you can build yourself.
 </section>
 </section>
 <section>
-<section id="slide-orgd389e40">
-<h2 id="orgd389e40">Notable Mentions</h2>
+<section id="slide-org269e9ac">
+<h2 id="org269e9ac">Notable Mentions</h2>
 <aside class="notes">
 <p>
 So the original Dactyl design is what I chose to go with, and I'll go over my
@@ -271,8 +271,8 @@ other options available out there &amp; what I like and don't like about them.
 
 </aside>
 </section>
-<section id="slide-org909dd09">
-<h3 id="org909dd09"><a href="https://kinesis-ergo.com/shop/advantage2/">Kinesis Advantage2</a></h3>
+<section id="slide-org021f56d">
+<h3 id="org021f56d"><a href="https://kinesis-ergo.com/shop/advantage2/">Kinesis Advantage2</a></h3>
 
 <div class="figure">
 <p><img src="img/Kinesis_Adv2.jpg" alt="Kinesis_Adv2.jpg" />
@@ -299,8 +299,8 @@ when you drop over $300 on something exclusively commercial.
 </aside>
 
 </section>
-<section id="slide-org50e682d">
-<h3 id="org50e682d"><a href="https://ergodox-ez.com/">ErgoDox (EZ)</a></h3>
+<section id="slide-org437c321">
+<h3 id="org437c321"><a href="https://ergodox-ez.com/">ErgoDox (EZ)</a></h3>
 
 <div class="figure">
 <p><img src="img/Ergodox_EZ.jpg" alt="Ergodox_EZ.jpg" />
@@ -328,8 +328,8 @@ readily, and the rest of the parts can be easily sourced yourself.
 </aside>
 
 </section>
-<section id="slide-orgf0f8593">
-<h3 id="orgf0f8593"><a href="https://github.com/nicinabox/lets-split-guide">Let's Split</a></h3>
+<section id="slide-org06ce682">
+<h3 id="org06ce682"><a href="https://github.com/nicinabox/lets-split-guide">Let's Split</a></h3>
 
 <div class="figure">
 <p><img src="img/Let's_Split.jpg" alt="Let's_Split.jpg" />
@@ -355,8 +355,8 @@ split form factor. Someone had, and that's why I'm here.
 </aside>
 
 </section>
-<section id="slide-orgb27e2e2">
-<h3 id="orgb27e2e2"><a href="https://atreus.technomancy.us/">Atreus</a></h3>
+<section id="slide-org094c394">
+<h3 id="org094c394"><a href="https://atreus.technomancy.us/">Atreus</a></h3>
 
 <div class="figure">
 <p><img src="img/Atreus.jpg" alt="Atreus.jpg" />
@@ -381,8 +381,8 @@ being easy to grab &amp; go if you're using it in a mobile set-up.
 </aside>
 
 </section>
-<section id="slide-orgc59eed8">
-<h3 id="orgc59eed8"><a href="http://troyfletcher.net/keyboard_sales.html">Signum 3 (Troy Fletcher)</a></h3>
+<section id="slide-orge629db7">
+<h3 id="orge629db7"><a href="http://troyfletcher.net/keyboard_sales.html">Signum 3 (Troy Fletcher)</a></h3>
 
 <div class="figure">
 <p><img src="img/Signum3.0.jpg" alt="Signum3.0.jpg" />
@@ -411,13 +411,13 @@ contact the author for product designs if you need them.
 </section>
 </section>
 <section>
-<section id="slide-orgc955bfd">
-<h2 id="orgc955bfd">Other Dactyl Variations</h2>
-<div class="outline-text-2" id="text-orgc955bfd">
+<section id="slide-org5a4c3d7">
+<h2 id="org5a4c3d7">Other Dactyl Variations</h2>
+<div class="outline-text-2" id="text-org5a4c3d7">
 </div>
 </section>
-<section id="slide-org4aa9a6d">
-<h3 id="org4aa9a6d"><a href="https://github.com/adereth/dactyl-keyboard/pull/48">Dactyl Ergodox</a></h3>
+<section id="slide-orgae48078">
+<h3 id="orgae48078"><a href="https://github.com/adereth/dactyl-keyboard/pull/48">Dactyl Ergodox</a></h3>
 
 <div class="figure">
 <p><img src="img/Dactyl Ergodox.png" alt="Dactyl Ergodox.png" />
@@ -429,7 +429,7 @@ contact the author for product designs if you need them.
 
 </ul>
 </section>
-<section id="slide-org4aa9a6d-split">
+<section id="slide-orgae48078-split">
 <ul>
 <li>Disadvantages: Incomplete design</li>
 <li>Open Source: Yes</li>
@@ -447,8 +447,8 @@ he's made the source available.
 </aside>
 
 </section>
-<section id="slide-org3fb1ddd">
-<h3 id="org3fb1ddd"><a href="https://github.com/adereth/dactyl-keyboard/tree/master/things">Lightcycle Dactyl</a></h3>
+<section id="slide-org30acd8a">
+<h3 id="org30acd8a"><a href="https://github.com/adereth/dactyl-keyboard/tree/master/things">Lightcycle Dactyl</a></h3>
 
 <div class="figure">
 <p><img src="img/LightCycle.jpeg" alt="LightCycle.jpeg" />
@@ -460,7 +460,7 @@ he's made the source available.
 
 </ul>
 </section>
-<section id="slide-org3fb1ddd-split">
+<section id="slide-org30acd8a-split">
 <ul>
 <li>Disadvantages: STL files for 3D printing appear to need more repair than basic model</li>
 <li>Open Source: Yes</li>
@@ -478,8 +478,8 @@ design, but are meant to be fit with Cherry MX mechanical switches.
 </aside>
 
 </section>
-<section id="slide-org43b2fde">
-<h3 id="org43b2fde"><a href="https://github.com/tshort/dactyl-keyboard">Dactyl Manuform</a></h3>
+<section id="slide-orgd56850d">
+<h3 id="orgd56850d"><a href="https://github.com/tshort/dactyl-keyboard">Dactyl Manuform</a></h3>
 
 <div class="figure">
 <p><img src="img/Dactyl Manuform.jpg" alt="Dactyl Manuform.jpg" />
@@ -492,7 +492,7 @@ is larger making wiring less tedious</li>
 
 </ul>
 </section>
-<section id="slide-org43b2fde-split">
+<section id="slide-orgd56850d-split">
 <ul>
 <li>Disadvantages: Must be wired by hand, all of the challenges that come with
 original Dactyl</li>
@@ -514,8 +514,8 @@ switch to this in the future.
 </section>
 </section>
 <section>
-<section id="slide-orgbc4f5a5">
-<h2 id="orgbc4f5a5">More Do-it-Yourself Options</h2>
+<section id="slide-org71f29dc">
+<h2 id="org71f29dc">More Do-it-Yourself Options</h2>
 <p>
 <code>There is a very nice list of other ergonomic keyboards, with pictures, on Xah Lee's website.</code>
 </p>
@@ -527,8 +527,8 @@ switch to this in the future.
 </section>
 </section>
 <section>
-<section id="slide-orgfdc1e02">
-<h2 id="orgfdc1e02">Reasons for Choosing Dactyl</h2>
+<section id="slide-org7881632">
+<h2 id="org7881632">Reasons for Choosing Dactyl</h2>
 <ul>
 <li>Open Source</li>
 <li>Looked like the most comfortable design</li>
@@ -539,8 +539,8 @@ switch to this in the future.
 </section>
 </section>
 <section>
-<section id="slide-org569270b">
-<h2 id="org569270b">My Reasons for Building by Hand Instead of Purchasing</h2>
+<section id="slide-orgceb8418">
+<h2 id="orgceb8418">My Reasons for Building by Hand Instead of Purchasing</h2>
 <ul>
 <li>At the time there were none being manufactured</li>
 <li>Sense of self-satisfaction</li>
@@ -551,18 +551,18 @@ my own!</li>
 </section>
 </section>
 <section>
-<section id="slide-org04f24f4">
-<h2 id="org04f24f4">One Year Later</h2>
+<section id="slide-org6691c34">
+<h2 id="org6691c34">One Year Later</h2>
 </section>
 </section>
 <section>
-<section id="slide-org986f340">
-<h2 id="org986f340">Build Overview</h2>
-<div class="outline-text-2" id="text-org986f340">
+<section id="slide-org9e66067">
+<h2 id="org9e66067">Build Overview</h2>
+<div class="outline-text-2" id="text-org9e66067">
 </div>
 </section>
-<section id="slide-org12bf342">
-<h3 id="org12bf342">Shell/Case</h3>
+<section id="slide-org9a05d6e">
+<h3 id="org9a05d6e">Shell/Case</h3>
 <ul>
 <li>The body of the keyboard is 3D printed by me</li>
 <li>There are 4 parts to print, each took 21 hours to complete on a RepRap style
@@ -584,15 +584,15 @@ the bottom left half and I think it turned out pretty good.
 
 </aside>
 </section>
-<section id="slide-orge63ad4d">
-<h3 id="orge63ad4d">Hardware</h3>
+<section id="slide-org6328d43">
+<h3 id="org6328d43">Hardware</h3>
 
 <div class="figure">
 <p><img src="img/IMG_20190711_075410.jpg" alt="IMG_20190711_075410.jpg" />
 </p>
 </div>
 </section>
-<section id="slide-orge63ad4d-split">
+<section id="slide-org6328d43-split">
 
 <div class="figure">
 <p><img src="img/IMG_20190711_075433.jpg" alt="IMG_20190711_075433.jpg" />
@@ -614,8 +614,8 @@ cause any shorts with the wiring.
 </aside>
 
 </section>
-<section id="slide-org4b7b1e2">
-<h3 id="org4b7b1e2">Switches</h3>
+<section id="slide-org70bcee0">
+<h3 id="org70bcee0">Switches</h3>
 <ul>
 <li>Fits Cherry MX switches</li>
 
@@ -632,8 +632,8 @@ example (just be aware that colors/models differ between the two manufacturers).
 
 </aside>
 </section>
-<section id="slide-org2c5cf3d">
-<h3 id="org2c5cf3d">Keycaps</h3>
+<section id="slide-org6755025">
+<h3 id="org6755025">Keycaps</h3>
 
 <div class="figure">
 <p><img src="img/keycap-profiles-reddit.jpg" alt="keycap-profiles-reddit.jpg" />
@@ -655,8 +655,8 @@ that reason.
 </aside>
 
 </section>
-<section id="slide-org98ce417">
-<h3 id="org98ce417">PCB Design</h3>
+<section id="slide-orge524535">
+<h3 id="orge524535">PCB Design</h3>
 
 <div class="figure">
 <p><object type="image/svg+xml" data="assets/Dactyl_8x9.svg" class="org-svg">
@@ -687,8 +687,8 @@ piece individually.
 </aside>
 
 </section>
-<section id="slide-org364e26d">
-<h3 id="org364e26d">Xerox Printer</h3>
+<section id="slide-org69c0d01">
+<h3 id="org69c0d01">Xerox Printer</h3>
 
 <div class="figure">
 <p><img src="img/IMG_20190711_074742.jpg" alt="IMG_20190711_074742.jpg" />
@@ -709,8 +709,8 @@ paper jamming issue and replaced them with parts sourced from ebay.
 </aside>
 
 </section>
-<section id="slide-org2fc6fdf">
-<h3 id="org2fc6fdf">Preparing the Copper for the Design</h3>
+<section id="slide-orgf34b50a">
+<h3 id="orgf34b50a">Preparing the Copper for the Design</h3>
 
 <div class="figure">
 <p><img src="img/IMG_20190630_231134.jpg" alt="IMG_20190630_231134.jpg" />
@@ -729,8 +729,8 @@ would apply enough wax to hold the design together.
 </aside>
 
 </section>
-<section id="slide-org226c825">
-<h3 id="org226c825">Final PCB Design</h3>
+<section id="slide-org40329d4">
+<h3 id="org40329d4">Final PCB Design</h3>
 
 <div class="figure">
 <p><img src="img/IMG_20190630_232417.jpg" alt="IMG_20190630_232417.jpg" />
@@ -738,11 +738,11 @@ would apply enough wax to hold the design together.
 </div>
 
 </section>
-<section id="slide-orga6ad563">
-<h3 id="orga6ad563">Etching</h3>
-<section><video controls><source data-src="media/Etching-resize.mp4" type="video/mp4" /></video></section>
+<section id="slide-org5acf21a">
+<h3 id="org5acf21a">Etching</h3>
+<section><video controls><source data-src="media/Etching.mp4" type="video/mp4" /></video></section>
 </section>
-<section id="slide-orga6ad563-split">
+<section id="slide-org5acf21a-split">
 
 <div class="figure">
 <p><img src="img/IMG_20190701_124022.jpg" alt="IMG_20190701_124022.jpg" />
@@ -770,8 +770,8 @@ of coating over the copper to prevent corrosion.
 </aside>
 
 </section>
-<section id="slide-org6e286cf">
-<h3 id="org6e286cf">How Does it Work?</h3>
+<section id="slide-org0c4f1d9">
+<h3 id="org0c4f1d9">How Does it Work?</h3>
 
 <div class="figure">
 <p><img src="img/howkeymatriceswork.gif" alt="howkeymatriceswork.gif" />
@@ -804,8 +804,8 @@ to updates in the QMK firmware, but I don't know. It's something to be aware of.
 </aside>
 
 </section>
-<section id="slide-org363f467">
-<h3 id="org363f467">Notes on LEDs</h3>
+<section id="slide-orgd9a83d6">
+<h3 id="orgd9a83d6">Notes on LEDs</h3>
 <aside class="notes">
 <p>
 Oh boy. One challenge I faced was how to choose resistors to match up with the
@@ -825,8 +825,8 @@ of LED you would use to backlight your keycaps.
 </aside>
 
 </section>
-<section id="slide-orgb780c74">
-<h3 id="orgb780c74">PSA: TRRS != TRS!</h3>
+<section id="slide-org94ea64d">
+<h3 id="org94ea64d">PSA: TRRS != TRS!</h3>
 
 <div class="figure">
 <p><img src="img/TRRS.JPG" alt="TRRS.JPG" />
@@ -851,23 +851,24 @@ that's more likely due to a short in the right half that I still need to diagnos
 </aside>
 
 </section>
-<section id="slide-orgbaa4121">
-<h3 id="orgbaa4121">Firmware</h3>
+<section id="slide-org09bb534">
+<h3 id="org09bb534">Firmware</h3>
+<aside class="notes">
 <p>
-#+BEIGN<sub>NOTES</sub>
 So I have a spare Teensy 2.0 here, and I think instead of describing the
 flashing process I'll just show you.
 I'll be loading QMK firmware onto this. It's the most popular and widely
 supported keyboard firmware available that I've found at least. They have a huge
 list of hardware that the project supports.
-#+END<sub>NOTES</sub>
 </p>
+
+</aside>
 
 </section>
 </section>
 <section>
-<section id="slide-orgdc012ea">
-<h2 id="orgdc012ea">Was It Worth It?</h2>
+<section id="slide-org778ebf1">
+<h2 id="org778ebf1">Was It Worth It?</h2>
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
 
@@ -929,8 +930,8 @@ list of hardware that the project supports.
 </section>
 </section>
 <section>
-<section id="slide-org6b65e72">
-<h2 id="org6b65e72">Resources</h2>
+<section id="slide-orgaf93a66">
+<h2 id="orgaf93a66">Resources</h2>
 <ul>
 <li><a href="https://drop.com">Drop.com (formerly MassDrop)</a></li>
 
@@ -956,20 +957,21 @@ Seems to be the primary vendor for the Let's Split PCBs
 </p>
 
 </section>
-<section id="slide-org524f5ae">
-<h3 id="org524f5ae">Tutorials</h3>
+<section id="slide-orgcd27e9f">
+<h3 id="orgcd27e9f">Tutorials</h3>
 <ul>
 <li><a href="https://www.youtube.com/watch?v=4dZ2LKe7660">Etching with Muriatic Acid &amp; Hydrgen Peroxide</a></li>
-<li><a href="https://www.youtube.com/watch?v=1nwnnMoudu0">HongKongGhost</a></li>
-<li><a href="https://www.youtube.com/watch?v=NfcgA1axPLo">AfrotechMods on resistanc</a></li>
+<li><a href="https://www.youtube.com/watch?v=1nwnnMoudu0">HongKongGhost - Dactyl
+Hand-Wiring Build Video</a></li>
+<li><a href="https://www.youtube.com/watch?v=NfcgA1axPLo">AfrotechMods on resistance</a></li>
 <li><a href="https://www.instructables.com/id/Making-flexible-PCBs-with-a-laser-jet-printer-or-c/">https://www.instructables.com/id/Making-flexible-PCBs-with-a-laser-jet-printer-or-c/</a></li>
 <li><a href="https://www.instructables.com/id/DIY-Flexible-Printed-Circuits/">https://www.instructables.com/id/DIY-Flexible-Printed-Circuits/</a></li>
 
 </ul>
 
 </section>
-<section id="slide-org921f8c5">
-<h3 id="org921f8c5">Hardware &amp; Accessories Vendors</h3>
+<section id="slide-org716b11e">
+<h3 id="org716b11e">Hardware &amp; Accessories Vendors</h3>
 <p>
 <a href="https://digikey.com">Digikey.com - Electrical components</a>
 <a href="https://www.sparkfun.com/">Sparkfun.com - Hobby-grade electrical components</a>
